[package]
name = "hintly"
version = "0.1.0"
edition = "2021"

[build-dependencies]
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clipboard-rs = "0.1.11"
dirs = "5.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
